data validation is working on shapes
