# python-flask-server/swagger_server/models/boundary.py
@@ -1,7 +1,7 @@
 # coding: utf-8
 
 from __future__ import absolute_import
-from swagger_server.models.rectangle import Rectangle
+from swagger_server.models.shape import Shape
 from .base_model_ import Model
 from datetime import date, datetime
 from typing import List, Dict
@@ -13,15 +13,15 @@ class Boundary(Model):
     NOTE: This class is auto generated by the swagger code generator program.
     Do not edit the class manually.
     """
-    def __init__(self, boundary_info: Rectangle=None):
+    def __init__(self, boundary_info: Shape=None):
         """
         Boundary - a model defined in Swagger
 
         :param boundary_info: The boundary_info of this Boundary.
-        :type boundary_info: Rectangle
+        :type boundary_info: Shape
         """
         self.swagger_types = {
-            'boundary_info': Rectangle
+            'boundary_info': Shape
         }
 
         self.attribute_map = {
@@ -43,22 +43,22 @@ class Boundary(Model):
         return deserialize_model(dikt, cls)
 
     @property
-    def boundary_info(self) -> Rectangle:
+    def boundary_info(self) -> Shape:
         """
         Gets the boundary_info of this Boundary.
 
         :return: The boundary_info of this Boundary.
-        :rtype: Rectangle
+        :rtype: Shape
         """
         return self._boundary_info
 
     @boundary_info.setter
-    def boundary_info(self, boundary_info: Rectangle):
+    def boundary_info(self, boundary_info: Shape):
         """
         Sets the boundary_info of this Boundary.
 
         :param boundary_info: The boundary_info of this Boundary.
-        :type boundary_info: Rectangle
+        :type boundary_info: Shape
         """
         if boundary_info is None:
             raise ValueError("Invalid value for `boundary_info`, must not be `None`")
