# python-flask-server/swagger_server/models/obstacle.py
@@ -1,7 +1,7 @@
 # coding: utf-8
 
 from __future__ import absolute_import
-from swagger_server.models.rectangle import Rectangle
+from swagger_server.models.shape import Shape
 from .base_model_ import Model
 from datetime import date, datetime
 from typing import List, Dict
@@ -13,18 +13,18 @@ class Obstacle(Model):
     NOTE: This class is auto generated by the swagger code generator program.
     Do not edit the class manually.
     """
-    def __init__(self, obstacle_id: int=None, obstacle_info: Rectangle=None):
+    def __init__(self, obstacle_id: int=None, obstacle_info: Shape=None):
         """
         Obstacle - a model defined in Swagger
 
         :param obstacle_id: The obstacle_id of this Obstacle.
         :type obstacle_id: int
         :param obstacle_info: The obstacle_info of this Obstacle.
-        :type obstacle_info: Rectangle
+        :type obstacle_info: Shape
         """
         self.swagger_types = {
             'obstacle_id': int,
-            'obstacle_info': Rectangle
+            'obstacle_info': Shape
         }
 
         self.attribute_map = {
@@ -73,22 +73,22 @@ class Obstacle(Model):
         self._obstacle_id = obstacle_id
 
     @property
-    def obstacle_info(self) -> Rectangle:
+    def obstacle_info(self) -> Shape:
         """
         Gets the obstacle_info of this Obstacle.
 
         :return: The obstacle_info of this Obstacle.
-        :rtype: Rectangle
+        :rtype: Shape
         """
         return self._obstacle_info
 
     @obstacle_info.setter
-    def obstacle_info(self, obstacle_info: Rectangle):
+    def obstacle_info(self, obstacle_info: Shape):
         """
         Sets the obstacle_info of this Obstacle.
 
         :param obstacle_info: The obstacle_info of this Obstacle.
-        :type obstacle_info: Rectangle
+        :type obstacle_info: Shape
         """
 
         self._obstacle_info = obstacle_info
